--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/react-tenzies/assets/favicon.63a26457.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script type="module" crossorigin src="/react-tenzies/assets/index.891a6f88.js"></script>
+    <link rel="stylesheet" href="/react-tenzies/assets/index.d514c763.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
